# Consistency-in-Large-Language-Models-Ensures-Reliable-Patient-Feedback-Classification

./: Appendix 1 operationnal scope of categories.json  Appendix 3 sample populations.R  README.md
Experience_1_to_5/: 00_define_categories_and_feedback_keys.R  01_create_matrix_GS.R  02_create_matrix_humans.R  03_create_matrix_GPT4_CA.R  04_create_matrix_GPT4_standalone.R  05_humans_GPT4_and_CA_performances.R  06_create_GPT4_CA_error_list.R  07_hallucination_rates.R  08_McNemar_tests.R  09_reproducibility_measurement.R
Experience_6/: 00_define_categories_and_feedback_keys.R  01_create_GPT4_matrix.R  02_create_regex_matrix.R  03_create_NB_matrix.R  04_create_LSTM_matrix.R  05_create_Llama3_matrix.R  06_compare_algorithms.R  07_graphical_abstract_figure_experience_3.R
LLM_prompts_and_API/: LLM_call_function.ipynb  README.md  classify.py  deidentify.py  post_production_classify.py  post_production_deidentify.py  prompt_deidentify.txt  pyproject.toml  regex.csv  sample_excel.xlsx  sample_llm4quality.csv
LLM_prompts_and_API/llm4quality/: constants.py  tiktoken.py
LLM_prompts_and_API/llm4quality/classify/: classify_verbatim.py  clean_output_classify.py  evaluate_classify.py  excel_classify.py
LLM_prompts_and_API/llm4quality/deidentify/: clean_output_deidentify.py  deidentify_verbatim.py  excel_deidentify.py
