[tool.poetry]
name = "llm4quality"
version = "0.1.0"
description = ""
authors = ["Xavier <47183833+Xavier-Corbier@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.1"
openai = "^1.13.3"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
openpyxl = "^3.1.2"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
